2003-05-12  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-scan-month): Use format-string. Thanks to
	Yoichi NAKAYAMA <yoichi@geiin.org> for his suggestion.
	
	* emacs/mhc-cvs.el (mhc-cvs/unknown-file): Correct the wrong use
	of `message'.  Thanks to Yoichi NAKAYAMA <yoichi@geiin.org> for
	his suggestion.

2003-04-28  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* mhc2ol.in (MonthlyByDow.handle_recurrence): Limit the range of
	rp.Instance to 5 which means the last week.
	(MhcScheduleItem.to_outlook): Lower the case of ord_str.

2003-04-15  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew/header-string)
	(mhc-mew/header-string-review): Use 'mhc of invisible property
	value.
	(mhc-mew-summary-mode-setup): Exec mew-summary-set-count-line()
	if exist this.

2003-03-07  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* mhc2ol.in (usage): New options `-m' and `-d'.
	(Exporter): New class varialbes @@mhc_category_name and
	(Exporter): @@additional_category = false.
	(Exporter.setup_ol_appointments): Append `MHC-sch' category to
	Outlook appointments and tasks.
	(Exporter.setup_ol_appointments): Improve the condition to save an
	Outlook appointment. Thanks to sakura@tennodai.com.
	(Exporter.setup_ol_appointments): Improve the derivation of
	task.DueDate.  Thanks to sakura@tennodai.com.
	(Exporter.delete_ol_schedules): Support `-d' option.
	(Exporter.set_flag_discreet): New method.
	(Exporter.set_flag_additional_category): Ditto.

2003-03-06  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* mhc2ol.in (RepeatPattern.Period.get_duration): Return 60 * 24
	minutes if either @edate or @sdate is nil.  Support `-s' option.
	(MhcScheduleItem.to_outlook): Assumu NonRepeat if either time_b or
	time_e is valid.
	(Exporter.setup_ol_appointments): Get duration with period
	.get_duration().
	(Exporter.setup_ol_appointments): Don't set a reminder is any
	alarms are not set.
	(Exporter.setup_ol_appointments): Don't save an appointment with
	`-s' option.